cmake_minimum_required (VERSION 3.13.2)
project(banking_console)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(bankingConsole ${SOURCES})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")